# ibazel-benchmark-runner

./: .npmignore  BUILD.bazel  README.md  WORKSPACE  index.js  package.json
.circleci/: config.yml
test/: BUILD.bazel  go.ts  index.html  main.ts
