package(default_visibility = ["//visibility:public"])

# NOTE: this will move to node_modules/BUILD in a later release
filegroup(
    name = "node_modules",
    srcs = glob(["/".join([
        "node_modules",
        pkg,
        "**",
        ext,
    ]) for pkg in [
        "tsickle",
        "tsutils",
        "typescript",
        "@types",
    ] for ext in [
        "*.js",
        "*.json",
        "*.d.ts",
    ]]),
)
