package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = glob(["*.ts"]),
    tsconfig = ":tsconfig.json",
)

load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver")

ts_devserver(
    name = "devserver",
    entry_module = "ibazel_benchmark_runner/test/main",
    serving_path = "/bundle.js",
    static_files = [
        "index.html",
    ],
    deps = [":src"],
)
